# link

examples/esp32_linkaudio/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp32_linkaudio/main/: AudioPlatform_ESP32.hpp  AudioPlatform_ESP32.ipp  CMakeLists.txt  idf_component.yml  main.cpp
examples/linkaudio/: AudioEngine.hpp  AudioEngine.ipp  AudioPlatform.hpp  AudioPlatform_Portaudio.ipp  LinkAudioRenderer.hpp
examples/linkaudiohut/: main.cpp
include/ableton/util/: TripleBuffer.hpp
